--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Door Dash</title>
-    <link rel="stylesheet" type="text/css" href="/style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <div id="order-details">
@@ -109,9 +109,9 @@
             </table>
           </div>
           <div class="btns">
-             <!-- <button id="feeBtn" onclick="getFee()">
+              <!-- <button id="feeBtn" onclick="getFee()">
               Get Fee
-            </button> -->
+            </button>  -->
             <button id="orderBtn" onclick="createDelivery()">
               Place Order
             </button>
@@ -120,7 +120,7 @@
         </div>
       </div>
     </div>
-    <script src="/delivery.js"></script>
-    <script src="/order.js"></script>
+    <script src="delivery.js"></script>
+    <script src="order.js"></script>
   </body>
 </html>
